# osmdatapy

./: .gitattributes  .gitignore  .lgtm.yml  CHANGES.md  MANIFEST.in  README.md  __init__.py  _version.py  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml
devtools/: README.md
devtools/conda-envs/: environment.yml  test_env.yaml
docs/: Makefile  README.md  api.rst  conf.py  getting_started.rst  index.rst  make.bat  requirements.yaml
docs/notebooks/: introduction.ipynb
osmdatapy/: __init__.py  _geometry.py  _version.py  block.py  dataframe.py  defaults.py  dense.py  dense_primitives.py  geometry_utils.py  headers.py  osm_block.py  osm_data.py  osm_headers.py  osm_query.py  osmdata.py  osmdatapy.py  osmquery.py  primitives.py  protobuf.c  protobuf.pyx  query.py  simple_primitives.py
osmdatapy/datasource/: OSMdatasource.py  datasource.py  osm_datasource.py
osmdatapy/tests/: test_osmdatapy.py
