[build-system]
requires = ["setuptools>=64", "wheel", "Cython", "numpy", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "osmdatapy"
authors = [{ name = "Vincent Tinet" }]
description = "A fast and simple way to parse OSM data from pbf files into Pandas Dataframess"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "pandas", "geopandas>=1.0.0", "shapely", "aiohttp"]

[project.urls]
Homepage = "https://github.com/chourmo/netpandas"
Issues = "https://github.com/chourmo/netpandas/issues"

dynamic = ["version"]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["osmdatapy", "osmdatapy.*"]
